--- a/package.json
+++ b/package.json
@@ -9,38 +9,43 @@
     "build": "rm -rf dist && NODE_ENV=production webpack --config webpack.build.js --display-modules"
   },
   "devDependencies": {
+    "angular-mocks": "~1.4.7",
     "autoprefixer-loader": "~3.1.0",
-    "babel-core": "~5.8.23",
-    "babel-eslint": "~4.1.1",
+    "babel-core": "~5.8.25",
+    "babel-eslint": "~4.1.3",
     "babel-loader": "~5.3.2",
-    "babel-runtime": "~5.8.20",
-    "chai": "~3.2.0",
-    "css-loader": "~0.17.0",
-    "eslint": "~1.3.1",
+    "babel-runtime": "~5.8.25",
+    "css-loader": "~0.19.0",
+    "eslint": "~1.5.1",
     "eslint-loader": "~1.0.0",
     "extract-text-webpack-plugin": "~0.8.2",
     "file-loader": "~0.8.4",
     "html-webpack-plugin": "~1.6.1",
-    "karma": "~0.13.9",
+    "isparta-loader": "~1.0.0",
+    "karma": "~0.13.10",
     "karma-coverage": "~0.5.2",
+    "karma-coveralls": "~1.1.2",
     "karma-mocha": "~0.2.0",
+    "karma-mocha-reporter": "~1.1.1",
     "karma-phantomjs-launcher": "~0.2.1",
+    "karma-sourcemap-loader": "~0.3.5",
     "karma-sinon-chai": "~1.0.0",
     "karma-webpack": "~1.7.0",
-    "mocha": "~2.3.2",
     "ng-annotate-loader": "0.0.10",
     "ng-cache-loader": "0.0.13",
     "node-bourbon": "~4.2.3",
     "node-libs-browser": "~0.5.2",
-    "node-sass": "~3.3.2",
+    "node-sass": "~3.3.3",
     "phantomjs": "~1.9.18",
     "raw-loader": "~0.5.1",
-    "sass-loader": "~2.0.1",
-    "style-loader": "~0.12.3",
+    "sass-loader": "~3.0.0",
+    "style-loader": "~0.12.4",
     "url-loader": "~0.5.6",
-    "webpack": "~1.12.1",
-    "webpack-dev-server": "~1.10.1",
-    "webpack-notifier": "~1.2.1"
+    "webpack": "~1.12.2",
+    "webpack-dev-server": "~1.12.0",
+    "webpack-notifier": "~1.2.1",
+    "jquery": "~2.1.4",
+    "toastr": "~2.1.2"
   },
   "repository": {
     "type": "git",
@@ -50,7 +55,8 @@
     "url": "https://github.com/Sanji/sanji-exception-ui/issues"
   },
   "keywords": [
-    "sanji"
+    "sanji",
+    "exception"
   ],
   "author": {
     "name": "Zack Yang",
@@ -60,9 +66,7 @@
   "license": "MIT",
   "homepage": "https://github.com/Sanji/sanji-exception-ui",
   "dependencies": {
-    "angular": "~1.4.5",
-    "sanji-logger-ui": "~1.0.6",
-    "jquery": "~2.1.4",
-    "toastr": "~2.1.2"
+    "angular": "~1.4.7",
+    "sanji-logger-ui": "~1.0.7"
   }
 }
