--- a/package.json
+++ b/package.json
@@ -1,51 +1,64 @@
 {
   "name": "sanji-exception-ui",
-  "version": "1.0.4",
+  "version": "0.0.0-semantically-released",
   "description": "sanji-exception-ui UI",
   "main": "index",
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run test:single && npm run check-coverage"
+    }
+  },
   "scripts": {
-    "test": "NODE_ENV=test karma start",
     "start": "NODE_ENV=development node server/dev-server.js",
-    "build": "rm -rf dist && NODE_ENV=production webpack --config webpack.build.js --display-modules"
+    "prebuild": "rm -rf dist && mkdir dist",
+    "build": "NODE_ENV=production webpack --config webpack.build.js --display-modules",
+    "commit": "git-cz",
+    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
+    "test": "mocha --require ./scripts/mocha-bootload.js -w -R spec ./app/component/*.spec.js",
+    "test:single": "istanbul cover -x *.spec.js _mocha -- -R spec --require ./scripts/mocha-bootload.js ./app/component/*.spec.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7",
     "autoprefixer-loader": "~3.1.0",
+    "babel": "~5.8.23",
     "babel-core": "~5.8.25",
     "babel-eslint": "~4.1.3",
     "babel-loader": "~5.3.2",
     "babel-runtime": "~5.8.25",
+    "benv": "~2.0.0",
+    "chai": "~3.3.0",
+    "codecov.io": "~0.1.6",
+    "commitizen": "~1.0.5",
     "css-loader": "~0.19.0",
+    "cz-conventional-changelog": "~1.1.2",
     "eslint": "~1.5.1",
     "eslint-loader": "~1.0.0",
     "extract-text-webpack-plugin": "~0.8.2",
     "file-loader": "~0.8.4",
+    "ghooks": "~0.3.2",
     "html-webpack-plugin": "~1.6.1",
-    "isparta-loader": "~1.0.0",
-    "karma": "~0.13.10",
-    "karma-coverage": "~0.5.2",
-    "karma-coveralls": "~1.1.2",
-    "karma-mocha": "~0.2.0",
-    "karma-mocha-reporter": "~1.1.1",
-    "karma-phantomjs-launcher": "~0.2.1",
-    "karma-sourcemap-loader": "~0.3.5",
-    "karma-sinon-chai": "~1.0.0",
-    "karma-webpack": "~1.7.0",
+    "istanbul": "~0.3.21",
+    "jquery": "~2.1.4",
+    "mocha": "~2.3.3",
     "ng-annotate-loader": "0.0.10",
     "ng-cache-loader": "0.0.13",
     "node-bourbon": "~4.2.3",
     "node-libs-browser": "~0.5.2",
     "node-sass": "~3.3.3",
-    "phantomjs": "~1.9.18",
     "raw-loader": "~0.5.1",
     "sass-loader": "~3.0.0",
+    "semantic-release": "~4.3.5",
     "style-loader": "~0.12.4",
+    "toastr": "~2.1.2",
     "url-loader": "~0.5.6",
     "webpack": "~1.12.2",
     "webpack-dev-server": "~1.12.0",
-    "webpack-notifier": "~1.2.1",
-    "jquery": "~2.1.4",
-    "toastr": "~2.1.2"
+    "webpack-notifier": "~1.2.1"
   },
   "repository": {
     "type": "git",
@@ -67,6 +80,6 @@
   "homepage": "https://github.com/Sanji/sanji-exception-ui",
   "dependencies": {
     "angular": "~1.4.7",
-    "sanji-logger-ui": "~1.0.7"
+    "sanji-logger-ui": "~1.0.9"
   }
 }
