--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ cache:
 notifications:
   email: false
 node_js:
-  - '4.1.1'
+  - '4.1'
   - '0.12'
 before_install:
   - npm i -g npm@^2.0.0
 before_script:
   - npm prune
 script:
-  - npm run test:single
+  - npm run test:once
   - npm run check-coverage
   - npm run build
 after_success:
