--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "test": "mocha --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js",
-    "test:single": "istanbul cover -x *.spec.js _mocha -- -R spec --require ./scripts/mocha-bootload.js ./app/component/*.spec.js",
+    "test:once": "istanbul cover -x *.spec.js _mocha -- -R spec --require ./scripts/mocha-bootload.js ./app/component/*.spec.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
@@ -62,10 +62,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Sanji/sanji-exception-ui.git"
+    "url": "https://github.com/Sanji-IO/sanji-exception-ui.git"
   },
   "bugs": {
-    "url": "https://github.com/Sanji/sanji-exception-ui/issues"
+    "url": "https://github.com/Sanji-IO/sanji-exception-ui/issues"
   },
   "keywords": [
     "sanji",
