--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ cache:
 notifications:
   email: false
 node_js:
-  - '4.1'
   - '0.12'
+branches:
+  only:
+    - master
 before_install:
   - npm i -g npm@^2.0.0
 before_script:
