--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "sanji-exception-ui",
-  "version": "0.0.0-semantically-released",
   "description": "sanji-exception-ui UI",
+  "version": "0.0.0-semantically-released",
   "main": "index",
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run test:single && npm run check-coverage"
+      "pre-commit": "npm run test:once && npm run check-coverage"
     }
   },
   "scripts": {
@@ -52,7 +52,7 @@
     "node-sass": "~3.3.3",
     "raw-loader": "~0.5.1",
     "sass-loader": "~3.0.0",
-    "semantic-release": "~4.3.5",
+    "semantic-release": "^4.3.5",
     "style-loader": "~0.12.4",
     "toastr": "~2.1.2",
     "url-loader": "~0.5.6",
