--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "commit": "git-cz",
     "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "test": "mocha --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js",
+    "test": "mocha -w --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js",
     "test:once": "istanbul cover -x *.spec.js _mocha -- -R spec --require ./scripts/mocha-bootload.js ./app/component/*.spec.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
