--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sanji-exception-ui",
+  "author": "Zack Yang <zack9433@gmail.com> (https://github.com/zack9433)",
   "description": "sanji-exception-ui UI",
   "version": "0.0.0-semantically-released",
   "main": "index",
@@ -23,41 +24,40 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.7",
+    "angular-mocks": "1.4.7",
     "autoprefixer-loader": "~3.1.0",
-    "babel": "~5.8.23",
-    "babel-core": "~5.8.25",
-    "babel-eslint": "~4.1.3",
-    "babel-loader": "~5.3.2",
-    "babel-runtime": "~5.8.25",
-    "benv": "~2.0.0",
+    "babel-core": "~5.8.34",
+    "babel-eslint": "~4.1.6",
+    "babel-loader": "~5.3.3",
+    "babel-runtime": "~5.8.34",
+    "benv": "~2.1.0",
     "chai": "~3.3.0",
     "codecov.io": "~0.1.6",
-    "commitizen": "~1.0.5",
-    "css-loader": "~0.19.0",
-    "cz-conventional-changelog": "~1.1.2",
-    "eslint": "~1.5.1",
-    "eslint-loader": "~1.0.0",
-    "extract-text-webpack-plugin": "~0.8.2",
-    "file-loader": "~0.8.4",
-    "ghooks": "~0.3.2",
-    "html-webpack-plugin": "~1.6.1",
-    "istanbul": "~0.3.21",
-    "jquery": "~2.1.4",
-    "mocha": "~2.3.3",
+    "commitizen": "~2.5.0",
+    "css-loader": "~0.23.1",
+    "cz-conventional-changelog": "~1.1.5",
+    "eslint": "~1.10.3",
+    "eslint-loader": "~1.2.0",
+    "extract-text-webpack-plugin": "~1.0.1",
+    "file-loader": "~0.8.5",
+    "ghooks": "~1.0.3",
+    "html-webpack-plugin": "~1.7.0",
+    "istanbul": "~0.4.2",
+    "jquery": "~2.2.0",
+    "mocha": "~2.3.4",
     "ng-annotate-loader": "0.0.10",
-    "ng-cache-loader": "0.0.13",
+    "ng-cache-loader": "0.0.15",
     "node-bourbon": "~4.2.3",
     "node-libs-browser": "~0.5.2",
-    "node-sass": "~3.3.3",
+    "node-sass": "~3.4.2",
     "raw-loader": "~0.5.1",
-    "sass-loader": "~3.0.0",
-    "semantic-release": "^4.3.5",
+    "sass-loader": "~3.1.2",
+    "semantic-release": "~4.3.5",
     "style-loader": "~0.12.4",
     "toastr": "~2.1.2",
-    "url-loader": "~0.5.6",
-    "webpack": "~1.12.2",
-    "webpack-dev-server": "~1.12.0",
+    "url-loader": "~0.5.7",
+    "webpack": "~1.12.10",
+    "webpack-dev-server": "~1.14.0",
     "webpack-notifier": "~1.2.1"
   },
   "repository": {
@@ -71,15 +71,10 @@
     "sanji",
     "exception"
   ],
-  "author": {
-    "name": "Zack Yang",
-    "email": "zack9433@gmail.com",
-    "url": "https://github.com/Sanji-IO"
-  },
   "license": "MIT",
   "homepage": "https://github.com/Sanji/sanji-exception-ui",
   "dependencies": {
-    "angular": "~1.4.7",
-    "sanji-logger-ui": "~1.0.9"
+    "angular": "1.4.7",
+    "sanji-logger-ui": "~1.1.0"
   }
 }
