--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.8",
+    "angular-mocks": "1.4.7",
     "autoprefixer-loader": "~3.1.0",
     "babel-core": "~5.8.34",
     "babel-eslint": "~4.1.6",
@@ -74,7 +74,7 @@
   "license": "MIT",
   "homepage": "https://github.com/Sanji/sanji-exception-ui",
   "dependencies": {
-    "angular": "~1.4.8",
+    "angular": "1.4.7",
     "sanji-logger-ui": "~1.1.0"
   }
 }
