fix(test): fix test error and update dependency

--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
-    "angular-mocks": "1.4.7",
-    "autoprefixer-loader": "~3.1.0",
+    "angular-mocks": "~1.5.0",
+    "autoprefixer-loader": "~3.2.0",
     "babel-core": "~5.8.34",
     "babel-eslint": "~4.1.6",
     "babel-loader": "~5.3.3",
     "babel-runtime": "~5.8.34",
     "benv": "~2.1.0",
-    "chai": "~3.3.0",
+    "chai": "~3.5.0",
     "codecov.io": "~0.1.6",
     "commitizen": "~2.5.0",
     "css-loader": "~0.23.1",
@@ -44,16 +44,16 @@
     "html-webpack-plugin": "~1.7.0",
     "istanbul": "~0.4.2",
     "jquery": "~2.2.0",
-    "mocha": "~2.3.4",
-    "ng-annotate-loader": "0.0.10",
+    "mocha": "~2.4.5",
+    "ng-annotate-loader": "0.1.0",
     "ng-cache-loader": "0.0.15",
     "node-bourbon": "~4.2.3",
-    "node-libs-browser": "~0.5.2",
+    "node-libs-browser": "~1.0.0",
     "node-sass": "~3.4.2",
     "raw-loader": "~0.5.1",
     "sass-loader": "~3.1.2",
     "semantic-release": "~4.3.5",
-    "style-loader": "~0.12.4",
+    "style-loader": "~0.13.0",
     "toastr": "~2.1.2",
     "url-loader": "~0.5.7",
     "webpack": "~1.12.10",
@@ -74,7 +74,7 @@
   "license": "MIT",
   "homepage": "https://github.com/Sanji/sanji-exception-ui",
   "dependencies": {
-    "angular": "1.4.7",
-    "sanji-logger-ui": "~1.1.0"
+    "angular": "1.5.0",
+    "sanji-logger-ui": "~1.1.1"
   }
 }
