--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Zack Yang <zack9433@gmail.com> (https://github.com/zack9433)",
   "description": "sanji-exception-ui UI",
   "version": "0.0.0-semantically-released",
-  "main": "index",
+  "main": "dist/sanji-exception-ui.js",
   "config": {
     "ghooks": {
       "pre-commit": "npm run test:once && npm run check-coverage"
@@ -21,7 +21,8 @@
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "test": "mocha -w --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js",
     "test:once": "istanbul cover -x *.spec.js _mocha -- -R spec --require ./scripts/mocha-bootload.js ./app/component/*.spec.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "publish-latest": "publish-latest",
+    "semantic-release": "semantic-release pre && npm publish && npm run publish-latest && semantic-release post"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
@@ -33,7 +34,7 @@
     "benv": "~2.1.0",
     "chai": "~3.5.0",
     "codecov.io": "~0.1.6",
-    "commitizen": "~2.5.0",
+    "commitizen": "~2.7.0",
     "css-loader": "~0.23.1",
     "cz-conventional-changelog": "~1.1.5",
     "eslint": "~1.10.3",
@@ -50,15 +51,16 @@
     "node-bourbon": "~4.2.3",
     "node-libs-browser": "~1.0.0",
     "node-sass": "~3.4.2",
+    "publish-latest": "~1.1.2",
     "raw-loader": "~0.5.1",
-    "sass-loader": "~3.1.2",
+    "sass-loader": "~3.2.0",
     "semantic-release": "~4.3.5",
     "style-loader": "~0.13.0",
     "toastr": "~2.1.2",
     "url-loader": "~0.5.7",
     "webpack": "~1.12.10",
     "webpack-dev-server": "~1.14.0",
-    "webpack-notifier": "~1.2.1"
+    "webpack-notifier": "~1.3.0"
   },
   "repository": {
     "type": "git",
@@ -75,6 +77,6 @@
   "homepage": "https://github.com/Sanji/sanji-exception-ui",
   "dependencies": {
     "angular": "1.5.0",
-    "sanji-logger-ui": "~1.1.1"
+    "sanji-logger-ui": "~1.2.2"
   }
 }
