--- a/package.json
+++ b/package.json
@@ -17,48 +17,60 @@
     "prebuild": "rm -rf dist && mkdir dist",
     "build": "NODE_ENV=production webpack --config webpack.build.js --display-modules",
     "commit": "git-cz",
-    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "test": "mocha -w --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js",
-    "test:once": "istanbul cover -x *.spec.js _mocha -- -R spec --require ./scripts/mocha-bootload.js ./app/component/*.spec.js",
+    "test:once": "nyc mocha --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js && nyc report --reporter=html --reporter=lcov",
     "publish-latest": "publish-latest",
     "semantic-release": "semantic-release pre && npm publish && npm run publish-latest && semantic-release post"
+  },
+  "nyc": {
+    "exclude": [
+      "**/*.spec.js",
+      "scripts/mocha-bootload.js",
+      "dist",
+      "build"
+    ],
+    "report-dir": "./coverage"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
     "autoprefixer-loader": "~3.2.0",
-    "babel-core": "~5.8.34",
-    "babel-eslint": "~4.1.6",
-    "babel-loader": "~5.3.3",
-    "babel-runtime": "~5.8.34",
+    "babel-core": "^6.0.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-add-module-exports": "^0.2.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-runtime": "^6.6.1",
     "benv": "~2.1.0",
     "chai": "~3.5.0",
-    "codecov.io": "~0.1.6",
-    "commitizen": "~2.7.0",
+    "codecov.io": "^0.1.6",
+    "commitizen": "^2.8.0",
     "css-loader": "~0.23.1",
     "cz-conventional-changelog": "~1.1.5",
-    "eslint": "~1.10.3",
-    "eslint-loader": "~1.2.0",
+    "eslint": "^2.0.0",
+    "eslint-loader": "^1.3.0",
     "extract-text-webpack-plugin": "~1.0.1",
     "file-loader": "~0.8.5",
-    "ghooks": "~1.0.3",
+    "ghooks": "^1.2.0",
     "html-webpack-plugin": "~1.7.0",
-    "istanbul": "~0.4.2",
     "jquery": "~2.2.0",
     "mocha": "~2.4.5",
     "ng-annotate-loader": "0.1.0",
     "ng-cache-loader": "0.0.15",
     "node-bourbon": "~4.2.3",
     "node-libs-browser": "~1.0.0",
-    "node-sass": "~3.4.2",
+    "node-sass": "~3.7.0",
+    "nyc": "^6.4.4",
     "publish-latest": "~1.1.2",
     "raw-loader": "~0.5.1",
     "sass-loader": "~3.2.0",
-    "semantic-release": "~4.3.5",
+    "semantic-release": "^4.3.5",
     "style-loader": "~0.13.0",
     "toastr": "~2.1.2",
     "url-loader": "~0.5.7",
-    "webpack": "~1.12.10",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "~1.14.0",
     "webpack-notifier": "~1.3.0"
   },
