--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "scripts": {
     "validate": "npm run test:once && npm run check-coverage",
-    "start": "NODE_ENV=development node server/dev-server.js",
-    "prebuild": "rm -rf dist && mkdir dist",
-    "build": "NODE_ENV=production webpack --config webpack.build.js --display-modules",
+    "start": "cross-env NODE_ENV=development node server/dev-server.js",
+    "prebuild": "rimraf dist && mkdir dist",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.build.js --display-modules",
     "commit": "git-cz",
     "check-coverage": "nyc check-coverage --statements 75 --branches 75 --functions 75 --lines 75",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "test": "NODE_ENV=test mocha -w --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js",
+    "test": "cross-env NODE_ENV=test mocha -w --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js",
     "test:once": "nyc mocha --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js && nyc report --reporter=html --reporter=lcov",
     "publish-latest": "publish-latest",
     "semantic-release": "semantic-release pre && npm publish && npm run publish-latest && semantic-release post"
@@ -42,14 +42,15 @@
     "babel-loader": "^6.0.0",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-lodash": "^3.2.4",
-    "babel-preset-es2015": "~6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "benv": "~3.0.0",
     "chai": "~3.5.0",
     "codecov.io": "^0.1.6",
     "commitizen": "^2.8.0",
-    "css-loader": "~0.23.1",
+    "cross-env": "~2.0.1",
+    "css-loader": "^0.24.0",
     "cz-conventional-changelog": "~1.1.5",
-    "eslint": "^2.0.0",
+    "eslint": "^3.3.0",
     "eslint-loader": "^1.3.0",
     "file-loader": "~0.9.0",
     "ghooks": "^1.2.0",
@@ -60,20 +61,21 @@
     "ng-annotate-loader": "0.1.0",
     "ng-cache-loader": "0.0.15",
     "node-bourbon": "~4.2.3",
-    "node-sass": "~3.8.0",
+    "node-sass": "~3.10.0",
     "nyc": "^7.0.0",
     "opt-cli": "~1.5.1",
-    "postcss-loader": "~0.9.1",
+    "postcss-loader": "^0.11.0",
+    "progress-bar-webpack-plugin": "^1.9.0",
     "publish-latest": "~1.1.2",
     "raw-loader": "~0.5.1",
+    "rimraf": "~2.5.4",
     "sass-loader": "~4.0.0",
     "semantic-release": "^4.3.5",
     "style-loader": "~0.13.0",
     "toastr": "~2.1.2",
     "url-loader": "~0.5.7",
-    "webpack": "2.1.0-beta.19",
-    "webpack-dev-server": "2.1.0-beta.0",
-    "webpack-notifier": "~1.3.0"
+    "webpack": "^2.1.0-beta.24",
+    "webpack-dev-server": "^2.1.0-beta.0"
   },
   "repository": {
     "type": "git",
