--- a/package.json
+++ b/package.json
@@ -43,23 +43,23 @@
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-lodash": "^3.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "benv": "~3.0.0",
+    "benv": "~3.1.0",
     "chai": "~3.5.0",
     "codecov.io": "^0.1.6",
     "commitizen": "^2.8.0",
-    "cross-env": "~2.0.1",
+    "cross-env": "~3.0.0",
     "css-loader": "^0.24.0",
-    "cz-conventional-changelog": "~1.1.5",
+    "cz-conventional-changelog": "^1.2.0",
     "eslint": "^3.3.0",
     "eslint-loader": "^1.3.0",
     "file-loader": "~0.9.0",
     "ghooks": "^1.2.0",
     "html-webpack-plugin": "~2.22.0",
     "jquery": "~2.2.0",
-    "lodash-webpack-plugin": "^0.9.2",
-    "mocha": "~2.5.3",
-    "ng-annotate-loader": "0.1.0",
-    "ng-cache-loader": "0.0.15",
+    "lodash-webpack-plugin": "^0.10.0",
+    "mocha": "^3.0.0",
+    "ng-annotate-loader": "^0.2.0",
+    "ng-cache-loader": "^0.0.15",
     "node-bourbon": "~4.2.3",
     "node-sass": "~3.10.0",
     "nyc": "^7.0.0",
