--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
   "devDependencies": {
     "angular-mocks": "~1.5.0",
     "autoprefixer-loader": "~3.2.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.0.0",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.8",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-lodash": "^3.2.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.18.0",
     "benv": "~3.1.0",
     "chai": "~3.5.0",
     "codecov.io": "^0.1.6",
     "commitizen": "^2.8.0",
-    "cross-env": "~3.0.0",
-    "css-loader": "^0.24.0",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.0",
     "cz-conventional-changelog": "^1.2.0",
     "eslint": "^3.3.0",
     "eslint-loader": "^1.3.0",
@@ -60,22 +60,22 @@
     "mocha": "^3.0.0",
     "ng-annotate-loader": "^0.2.0",
     "ng-cache-loader": "^0.0.15",
-    "node-bourbon": "~4.2.3",
-    "node-sass": "~3.10.0",
-    "nyc": "^7.0.0",
+    "node-bourbon": "^4.2.3",
+    "node-sass": "^3.13.0",
+    "nyc": "^10.0.0",
     "opt-cli": "~1.5.1",
-    "postcss-loader": "^0.11.0",
+    "postcss-loader": "^1.1.1",
     "progress-bar-webpack-plugin": "^1.9.0",
     "publish-latest": "~1.1.2",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.5.4",
     "sass-loader": "~4.0.0",
-    "semantic-release": "^4.3.5",
+    "semantic-release": "^6.3.2",
     "style-loader": "~0.13.0",
     "toastr": "~2.1.2",
     "url-loader": "~0.5.7",
-    "webpack": "^2.1.0-beta.24",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "webpack": "^2.1.0-beta.27",
+    "webpack-dev-server": "^2.1.0-beta.12"
   },
   "repository": {
     "type": "git",
