--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "commit": "git-cz",
     "check-coverage": "nyc check-coverage --statements 75 --branches 75 --functions 75 --lines 75",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "test": "cross-env NODE_ENV=test mocha -w --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js",
-    "test:once": "nyc mocha --require ./scripts/mocha-bootload.js -R spec ./app/component/*.spec.js && nyc report --reporter=html --reporter=lcov",
+    "test": "cross-env NODE_ENV=test mocha -w --require ./scripts/mocha-bootload.js -R spec ./src/component/*.spec.js",
+    "test:once": "nyc mocha --require ./scripts/mocha-bootload.js -R spec ./src/component/*.spec.js && nyc report --reporter=html --reporter=lcov",
     "publish-latest": "publish-latest",
     "semantic-release": "semantic-release pre && npm publish && npm run publish-latest && semantic-release post"
   },
@@ -37,31 +37,31 @@
   "devDependencies": {
     "angular-mocks": "~1.5.0",
     "autoprefixer-loader": "~3.2.0",
-    "babel-core": "^6.18.2",
+    "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
+    "babel-loader": "^6.2.10",
     "babel-plugin-__coverage__": "^11.0.0",
-    "babel-plugin-lodash": "^3.2.4",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-preset-es2015": "^6.18.0",
-    "benv": "~3.1.0",
+    "benv": "~3.2.0",
     "chai": "~3.5.0",
     "codecov.io": "^0.1.6",
-    "commitizen": "^2.8.0",
+    "commitizen": "^2.9.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
     "cz-conventional-changelog": "^1.2.0",
-    "eslint": "^3.3.0",
+    "eslint": "^3.12.2",
     "eslint-loader": "^1.3.0",
     "file-loader": "~0.9.0",
     "ghooks": "^1.2.0",
-    "html-webpack-plugin": "~2.22.0",
+    "html-webpack-plugin": "~2.24.0",
     "jquery": "~2.2.0",
     "lodash-webpack-plugin": "^0.10.0",
     "mocha": "^3.0.0",
     "ng-annotate-loader": "^0.2.0",
-    "ng-cache-loader": "^0.0.15",
+    "ng-cache-loader": "^0.0.21",
     "node-bourbon": "^4.2.3",
-    "node-sass": "^3.13.0",
+    "node-sass": "^4.0.0",
     "nyc": "^10.0.0",
     "opt-cli": "~1.5.1",
     "postcss-loader": "^1.1.1",
@@ -69,12 +69,12 @@
     "publish-latest": "~1.1.2",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.5.4",
-    "sass-loader": "~4.0.0",
+    "sass-loader": "~4.1.0",
     "semantic-release": "^6.3.2",
     "style-loader": "~0.13.0",
     "toastr": "~2.1.2",
     "url-loader": "~0.5.7",
-    "webpack": "^2.1.0-beta.27",
+    "webpack": "^2.1.0-beta.28",
     "webpack-dev-server": "^2.1.0-beta.12"
   },
   "repository": {
