--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,34 @@
-sudo: false
+sudo: required
 language: node_js
-cache:
-  directories:
-    - node_modules
-notifications:
-  email: false
 node_js:
-  - '6'
-branches:
-  only:
-    - master
+  - "8"
+addons:
+  chrome: stable
+cache:
+  yarn: true
+  directories:
+    - ~/.yarn
+    - node_modules
+env:
+  global:
+    - YARN_VERSION=1.3.2
+
 before_install:
-  - npm i -g npm@^3.0.0
-before_script:
-  - npm prune
+  - yarn global add greenkeeper-lockfile@1
+  - |
+    if [[ ! -e ~/.yarn/bin/yarn || $(yarn --version) != "${YARN_VERSION}" ]]; then
+      curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version $YARN_VERSION
+    fi
+
+before_script: greenkeeper-lockfile-update
+after_script: greenkeeper-lockfile-upload
 script:
-  - npm run test:once
-  - npm run check-coverage
-  - npm run build
-after_success:
-  - npm run report-coverage
-  - npm run semantic-release
+  - yarn test:once
+  - yarn check-coverage
+after_success: 
+  - yarn report-coverage
+  - yarn travis-deploy-once "yarn semantic-release"
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
+
