--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "sanji-exception-ui",
   "author": "Zack Yang <zack9433@gmail.com> (https://github.com/zack9433)",
   "description": "sanji-exception-ui UI",
-  "version": "0.0.0-semantically-released",
+  "version": "0.0.0-development",
   "main": "dist/sanji-exception-ui.js",
   "config": {
     "ghooks": {
-      "pre-commit": "opt --in pre-commit --exec 'npm run validate'"
+      "pre-commit": "opt --in pre-commit --exec 'yarn validate'"
     },
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
     }
   },
   "scripts": {
-    "validate": "npm run test:once && npm run check-coverage",
+    "validate": "yarn test:once && yarn check-coverage",
     "start": "cross-env NODE_ENV=development node server/dev-server.js",
     "prebuild": "rimraf dist && mkdir dist",
     "build": "cross-env NODE_ENV=production webpack --config webpack.build.js --display-modules",
@@ -21,61 +21,59 @@
     "check-coverage": "nyc check-coverage --statements 75 --branches 75 --functions 75 --lines 75",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "test": "cross-env NODE_ENV=test mocha -w --require ./scripts/mocha-bootload.js -R spec ./src/component/*.spec.js",
-    "test:once": "nyc mocha --require ./scripts/mocha-bootload.js -R spec ./src/component/*.spec.js && nyc report --reporter=html --reporter=lcov",
-    "publish-latest": "publish-latest",
-    "semantic-release": "semantic-release pre && npm publish && npm run publish-latest && semantic-release post"
+    "test:once":
+      "nyc mocha --require ./scripts/mocha-bootload.js -R spec ./src/component/*.spec.js && nyc report --reporter=html --reporter=lcov",
+    "prepublishOnly": "yarn build",
+    "semantic-release": "semantic-release",
+    "travis-deploy-once": "travis-deploy-once"
   },
   "nyc": {
-    "exclude": [
-      "**/*.spec.js",
-      "scripts/mocha-bootload.js",
-      "dist",
-      "build"
-    ],
+    "exclude": ["**/*.spec.js", "scripts/mocha-bootload.js", "dist", "build"],
     "report-dir": "./coverage"
   },
   "devDependencies": {
-    "angular-mocks": "~1.5.0",
-    "autoprefixer-loader": "~3.2.0",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "angular": "~1.6.8",
+    "angular-mocks": "~1.6.8",
+    "autoprefixer": "~7.2.5",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-__coverage__": "^11.0.0",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-preset-es2015": "^6.18.0",
-    "benv": "~3.2.0",
+    "babel-plugin-angularjs-annotate": "^0.8.2",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-preset-env": "^1.6.1",
+    "benv": "~3.3.0",
     "chai": "~3.5.0",
     "codecov.io": "^0.1.6",
-    "commitizen": "^2.9.0",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.26.0",
-    "cz-conventional-changelog": "^1.2.0",
-    "eslint": "^3.12.2",
-    "eslint-loader": "^1.3.0",
-    "file-loader": "~0.9.0",
-    "ghooks": "^1.2.0",
-    "html-webpack-plugin": "~2.24.0",
-    "jquery": "~2.2.0",
-    "lodash-webpack-plugin": "^0.10.0",
-    "mocha": "^3.0.0",
-    "ng-annotate-loader": "^0.2.0",
-    "ng-cache-loader": "^0.0.21",
-    "node-bourbon": "^4.2.3",
-    "node-sass": "^4.0.0",
-    "nyc": "^10.0.0",
-    "opt-cli": "~1.5.1",
-    "postcss-loader": "^1.1.1",
-    "progress-bar-webpack-plugin": "^1.9.0",
-    "publish-latest": "~1.1.2",
+    "commitizen": "^2.9.6",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.9",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^4.16.0",
+    "eslint-loader": "^1.9.0",
+    "file-loader": "~1.1.6",
+    "ghooks": "^2.0.2",
+    "html-webpack-plugin": "^2.30.1",
+    "jquery": "~3.3.1",
+    "lodash-webpack-plugin": "^0.11.4",
+    "mocha": "^5.0.0",
+    "ng-cache-loader": "^0.0.26",
+    "node-bourbon": "^4.2.8",
+    "node-sass": "^4.7.2",
+    "nyc": "^11.4.1",
+    "opt-cli": "~1.6.0",
+    "postcss-loader": "^2.0.10",
     "raw-loader": "~0.5.1",
-    "rimraf": "~2.5.4",
-    "sass-loader": "~4.1.0",
-    "semantic-release": "^6.3.2",
-    "style-loader": "~0.13.0",
-    "toastr": "~2.1.2",
-    "url-loader": "~0.5.7",
-    "webpack": "^2.1.0-beta.28",
-    "webpack-dev-server": "^2.1.0-beta.12"
+    "rimraf": "~2.6.2",
+    "sanji-logger-ui": "~1.3.0",
+    "sass-loader": "~6.0.6",
+    "semantic-release": "^12.2.4",
+    "style-loader": "~0.19.1",
+    "toastr": "~2.1.4",
+    "travis-deploy-once": "^4.3.3",
+    "url-loader": "~0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "repository": {
     "type": "git",
@@ -84,14 +82,11 @@
   "bugs": {
     "url": "https://github.com/Sanji-IO/sanji-exception-ui/issues"
   },
-  "keywords": [
-    "sanji",
-    "exception"
-  ],
+  "keywords": ["sanji", "exception"],
   "license": "MIT",
   "homepage": "https://github.com/Sanji-IO/sanji-exception-ui",
-  "dependencies": {
-    "angular": "~1.5.0",
-    "sanji-logger-ui": "~1.2.7"
+  "peerDependencies": {
+    "angular": "~1.6.8",
+    "sanji-logger-ui": "~1.3.0"
   }
 }
